despliegues/0-namespace.yaml
kind:           Namespace
apiVersion:     v1
                # LIBRERIA/VERSION
                # Esta es la libreria que declara el objeto Namespace

metadata:
    name:       ivan
