despliegues/3-deployment.yaml
kind:           Deployment
apiVersion:     apps/v1

metadata:
    name:       deployment-ivan
    labels:
        app:    nginx

spec: 
    replicas:   2
    
    selector:
        matchLabels:
            app:        nginx
    
    template:
        metadata:
            name:       pod-ivan
            labels:
                app:    nginx
        
        spec: 
            containers:
                -   name:   mi-contenedor
                    image:  nginx:latest
                    ports:
                        - containerPort: 80 # Informacional. De buen gusto...
