despliegues/3.1.mariadb.yaml
#Desarrollador:

kind:           Deployment
apiVersion:     apps/v1

metadata:
    name:       deployment-mariadb
    labels:
        app:    mariadb

spec: 
    replicas:   1
    
    selector:
        matchLabels:
            app:        mariadb
    
    template:
        metadata:
            name:       pod-mariadb
            labels:
                app:    mariadb
        
        spec: 
            containers:
                -   name:   mi-contenedor
                    image:  mariadb:latest
                    ports:
                        - containerPort: 3306
---
kind:           Service
apiVersion:     v1

metadata:
    name:       db

spec: 
    type:       ClusterIP
    ports:  
               -    port: 3306
                    targetPort: 3306
    selector:
        app:    mariadb
