despliegues/3.2.wordpress.yaml
#Desarrollador:

kind:           Deployment
apiVersion:     apps/v1

metadata:
    name:       deployment-wordpress
    labels:
        app:    wordpress

spec: 
    replicas:   1
    
    selector:
        matchLabels:
            app:        wordpress
    
    template:
        metadata:
            name:       pod-wordpress
            labels:
                app:    wordpress
        
        spec: 
            containers:
                -   name:   mi-contenedor
                    image:  wordpress:latest
                    ports:
                        - containerPort: 80
---
kind:           Service
apiVersion:     v1

metadata:
    name:       wp

spec: 
    type:       NodePort
    ports:  
               -    port: 80
                    targetPort: 80
                    nodePort: 30080
    selector:
        app:    wordpress
