despliegues/8.NGINX.yaml
kind:           Deployment
apiVersion:     apps/v1

metadata:
    name:       deployment-ivan
    labels:
        app:    nginx

spec: 
    replicas:   1
    
    selector:
        matchLabels:
            app:        nginx
    
    template:
        metadata:
            name:       pod-ivan
            labels:
                app:    nginx
        
        spec: 
            containers:
                -   name:   mi-contenedor
                    image:  nginx:latest
                    ports:
                        - containerPort: 80 
---
kind:           Service
apiVersion:     v1

metadata:
    name:       nginx-ivan 

spec: 
    type:       LoadBalancer
    ports:  
               -    port: 8080 
                    targetPort: 80
                    nodePort: 30888
    selector:
        app:    nginx
