despliegues/11-NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mi-politica-de-red
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Ingress
    - Egress
  ingress:              # Quien puede acceder al puerto del pod
    - from:
        #- ipBlock:
        #    cidr: 172.17.0.0/16
        #    except:
        #      - 172.17.1.0/24
        - namespaceSelector:
            matchLabels:
              app: ingress
        #- podSelector:
        #    matchLabels:
        #      role: frontend
      ports:
        - protocol: TCP
          port: 80
  egress:               # A donde pude acceder el pod
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 80  # http
        - protocol: TCP
          port: 443 # https
